# aExampleUsingLibusbWithQt5Cmake

./: README.md
libusb_demo4controlpanelCppCmake/: CMakeLists.txt  controlpanel_protocal.cpp  controlpanel_protocal.h  controlpanel_usb_controller.cpp  controlpanel_usb_controller.h  main.cpp  main.qml  semaphore_cpp17.h  usinglibusb.cpp  usinglibusb.h
libusb_demo4controlpanelCppCmake/controlpanel_controller/: CMakeLists.txt  controlpanel_usb_controller.cpp  controlpanel_usb_controller.h
libusb_demo4controlpanelCppCmake/test_app/: CMakeLists.txt  usinglibusb.cpp
